--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,9 +1,14 @@
+server:
+  port: 8888
+
 spring:
   datasource:
     password: 'root'
-    url: jdbc:hsqldb:mem:testdb;DB_CLOSE_DELAY=-1
+    url: jdbc:hsqldb:mem:testdb
     username: SA
     driver-class-name: org.hsqldb.jdbc.JDBCDriver
+    sql-script-encoding: UTF-8
+    initialization-mode: always
 
   jpa:
     hibernate:
